--- a/index.html
+++ b/index.html
@@ -31,7 +31,49 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="home_setion">
+            <div class="container">
+                <div class="building">
+                    <div class="building_text">
+                        <h1>Building stellar websites for early startups</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                        <div class="building_btns">
+                            <button class="btn_yellow">View our work</button>
+                            <button class="building_btn"><a href="./pages/pricing.html">View Pricing 
+                                <span>
+                                - - - - >
+                                </span>
+                            </a></button>
+                        </div>
+                    </div>
+                    <div class="building_img">
+                        <img src="./images/home/home_first_img.png" alt="map">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="home_project">
+            <div class="container">
+                <div class="project">
+                    <div class="project_bigcard">
+                        <div class="project_bigcard__text">
+                            <h3>Workhub office Webflow Webflow Design</h3>
+                            <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam </p>
+                            <button class="pricing_page__btn"><a href="./pages/pricing.html">View Pricing <span class="pointer">- - - - ></span></a></button>
+                        </div>
+                    </div>
+                    <div class="project_cards">
+                        <div class="project_card project_card_one">
+                            <div class="project_card_bg">
+                                <h3>Unisaas Website Design</h3>
+                                <button class="pricing_page__btn"><a href="./pages/pricing.html">View Pricing <span class="pointer">- - - - ></span></a></button>
+                            </div>
+                        </div>
+                        <div class="project_card project_card__two"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
