--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../scss/style.css">
 </head>
 <body>
     <header class="header">
@@ -31,7 +32,46 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="contact_page">
+            <div class="container">
+                <div class="contact">
+                    <h1>Contact Us</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br>
+                        eiusmod tempor incididunt ut labore.
+                    </p>
+                    <form class="form" action="https://echo.htmlacademy.ru/">
+                        <!-- <label>
+                            <h4>Name</h4>
+                            <input type="text" placeholder="Enter your name" required name="User Name">
+                        </label>
+                        <button type="submit"> submit</button> -->
+
+                            <label>
+                                <h4>Name</h4>
+                                <input type="text" placeholder="Enter your name" required name="User Name:">
+                            </label>
+                            <label>
+                                <h4>Email</h4>
+                                <input type="email" placeholder="Enter your Email" required name="User Email:">
+                            </label>
+                            <label>
+                                <h4>Subject</h4>
+                                 <input type="text" placeholder="Provide Context" required name="Provide Context:">
+                            </label>
+                            <label>
+                                <h4>Subject</h4>
+                                <input type="text" placeholder="Select Subject" required name="Subject:">
+                            </label>
+                            <label class="message">
+                                <h4>Message</h4>
+                                <input class="message" type="text-area"  placeholder="Write your question here" required name="Your question:">
+                            </label>
+                        <button type="submit"> submit</button>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
