--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,15 +37,11 @@
                 <div class="contact">
                     <h1>Contact Us</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore.
                     </p>
                     <form class="form" action="https://echo.htmlacademy.ru/">
-                        <!-- <label>
-                            <h4>Name</h4>
-                            <input type="text" placeholder="Enter your name" required name="User Name">
-                        </label>
-                        <button type="submit"> submit</button> -->
+                        <div class="box">
 
                             <label>
                                 <h4>Name</h4>
@@ -65,9 +61,11 @@
                             </label>
                             <label class="message">
                                 <h4>Message</h4>
-                                <input class="message" type="text-area"  placeholder="Write your question here" required name="Your question:">
+                                <textarea class="textarea" placeholder="Write your  question here" required name="commit"></textarea>
                             </label>
-                        <button type="submit"> submit</button>
+
+                        </div>
+                        <button type="submit" class="btn_dark">Send Messege</button>
                     </form>
                 </div>
             </div>
