--- a/pages/contact.html
+++ b/pages/contact.html
@@ -111,6 +111,6 @@
             </div>
         </div>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
