--- a/index.html
+++ b/index.html
@@ -74,6 +74,81 @@
                 </div>
             </div>
         </section>
+        <section class="home_design">
+            <div class="container">
+                <div class="design">
+                    <span>Features</span>
+                    <h2>Design that solves problems, one product at a time</h2>
+                    <div class="design_cards">
+                        <div class="design_card">
+                            <span>
+                            </span>
+                            <h4>Uses Client First</h4>
+                            <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
+                        </div>
+                        <div class="design_card">
+                            <span>
+                            </span>
+                            <h4>Uses Client First</h4>
+                            <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
+                        </div>
+                        <div class="design_card">
+                            <span>
+                                <img src="./images/home/home_Icon.svg" alt="icon">
+                            </span>
+                            <h4>Uses Client First</h4>
+                            <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
+                        </div>
+                        <div class="design_card">
+                            <span>
+                                <img src="./images/home/home_Icon_(1).svg" alt="icon">
+                            </span>
+                            <h4>Uses Client First</h4>
+                            <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
+                        </div>
+                        <div class="design_card">
+                            <span>
+                                <img src="./images/home/home_Icon_(2).svg" alt="icon">
+                            </span>
+                            <h4>Uses Client First</h4>
+                            <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
+                        </div>
+                        <div class="design_card">
+                            <span>
+                            </span>
+                            <h4>Uses Client First</h4>
+                            <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="home_clients">
+            <div class="container">
+                <div class="clients">
+                    <div class="clients_left">
+                        <h3>What our clients say about us</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p>
+                    </div>
+                    <div class="clients_right">
+                        <h4>"The best agency we've worked with so far. They understand our product and are able to add new features with a great focus."</h4>
+                        <div class="clients_content">
+                            <div class="clients_card">
+                                <img src="./images/home/home_img_woman.png" alt="woman">
+                                <h5>
+                                    Jenny Wilson 
+                                    <span>Vice President</span>
+                                </h5>
+                            </div>
+                            <div class="clients_span">
+                                <span><</span>
+                                <span>></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
