home page full end

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         </section>
         <section class="home_project">
             <div class="container">
+                <div class="project_top">
+                    <h2>View our projects</h2>
+                    <button class="building_btn"><a class="project_top_link" href="./pages/pricing.html">View Pricing 
+                            <span>
+                            - - - - >
+                            </span>
+                    </a></button>
+                </div>
                 <div class="project">
                     <div class="project_bigcard">
                         <div class="project_bigcard__text">
