--- a/index.html
+++ b/index.html
@@ -97,34 +97,34 @@
                         <div class="design_card">
                             <span>
                             </span>
-                            <h4>Uses Client First</h4>
+                            <h4>Two Free Revision Round</h4>
                             <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
                         </div>
                         <div class="design_card">
                             <span>
                                 <img src="./images/home/home_Icon.svg" alt="icon">
                             </span>
-                            <h4>Uses Client First</h4>
+                            <h4>Template Customization</h4>
                             <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
                         </div>
                         <div class="design_card">
                             <span>
                                 <img src="./images/home/home_Icon_(1).svg" alt="icon">
                             </span>
-                            <h4>Uses Client First</h4>
+                            <h4>24/7 Support</h4>
                             <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
                         </div>
                         <div class="design_card">
                             <span>
                                 <img src="./images/home/home_Icon_(2).svg" alt="icon">
                             </span>
-                            <h4>Uses Client First</h4>
+                            <h4>Quick Delivery</h4>
                             <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
                         </div>
                         <div class="design_card">
                             <span>
                             </span>
-                            <h4>Uses Client First</h4>
+                            <h4>Hands-on approach</h4>
                             <p>Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
                         </div>
                     </div>
