about page full end

--- a/pages/about.html
+++ b/pages/about.html
@@ -31,7 +31,79 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="about_page">
+        <div class="container">
+          <div class="cards">
+            <div class="card">
+              <span class="info">About us</span>
+              <h1 class="big">Our designs solve problems</h1>
+              <p class="lor">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+              </p>
+            </div>
+            <div class="card_img">
+              <img
+                src="../images/About//group-of-people-sitting-indoors-3184360.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="about_img_card">
+        <div class="container">
+          <div class="bg">
+            <div class="text">
+              <div class="pragref">
+                <p class="jk">Goal focussed</p>
+                <p class="jk1">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+              <div class="pragref">
+                <p class="jk">Continuous improvement</p>
+                <p class="jk1">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+              </div>
+            </div>
+            <img
+              src="../images/About/man-in-blue-jacket-looking-at-white-board-7413916.png"
+              alt=""
+              class="img1"
+            />
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="bg-orqa">
+          <div class="container">
+            <p class="one">Meet our team</p>
+            <div class="cardss">
+              <div class="cardd">
+                <img src="../images/About/Card.png" alt="" />
+              </div>
+              <div class="cardd">
+                <img src="../images/About/Card (2).png" alt="" />
+              </div>
+              <div class="cardd">
+                <img src="../images/About/Card (3).png" alt="" />
+              </div>
+              <div class="cardd">
+                <img src="../images/About/Card (1).png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
         <div class="container">
