about page full end

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
             </div>
             <div class="card_img">
               <img
-                src="../images/About//group-of-people-sitting-indoors-3184360.png"
+                src="../images/about//group-of-people-sitting-indoors-3184360.png"
                 alt=""
               />
             </div>
@@ -76,7 +76,7 @@
               </div>
             </div>
             <img
-              src="../images/About/man-in-blue-jacket-looking-at-white-board-7413916.png"
+              src="../images/about/man-in-blue-jacket-looking-at-white-board-7413916.png"
               alt=""
               class="img1"
             />
@@ -89,16 +89,16 @@
             <p class="one">Meet our team</p>
             <div class="cardss">
               <div class="cardd">
-                <img src="../images/About/Card.png" alt="" />
+                <img src="../images/about/Card.png" alt="" />
               </div>
               <div class="cardd">
-                <img src="../images/About/Card (2).png" alt="" />
+                <img src="../images/about/Card (2).png" alt="" />
               </div>
               <div class="cardd">
-                <img src="../images/About/Card (3).png" alt="" />
+                <img src="../images/about/Card (3).png" alt="" />
               </div>
               <div class="cardd">
-                <img src="../images/About/Card (1).png" alt="" />
+                <img src="../images/about/Card (1).png" alt="" />
               </div>
             </div>
           </div>
