--- a/pages/blog.html
+++ b/pages/blog.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="blog"></section>
     </main>
     <footer>
         <div class="container">
